<resources>
    <string name="play_store_url">https://play.google.com/store/apps/details?id=in.sportscafe.nostragamus</string>
    <string name="facebook_app_id">841946925908609</string>
    <string name="fb_login_protocol_scheme">fb841946925908609</string>
    <string name="oauth_server_id">576361348926-ef040f3his3jfe3pchhqigjvrfjoejtp.apps.googleusercontent.com</string>
    <string name="oauth_server_id_pro">576361348926-ef040f3his3jfe3pchhqigjvrfjoejtp.apps.googleusercontent.com</string>
    <string name="fabric_api_key">66dc8b5ddc3cab78b5935c8254c264658064977d</string>
    <string name="branch_io_live_key">key_live_eoqby1Qi8GeRDkGLb4tRqemjEDajI3q5</string>
    <string name="branch_io_test_key">key_test_pfyhy6Sp0ViSymPQiXMmEonmuFpcM4Sn</string>
    <string name="moengage_app_id">Z3HNKJCO9QYTYXWGRKU4KEQR</string>
    <string name="amplitude_api_key">2ba081bedf8fb34e939cd1ac6e3231ab</string>
    <string name="gcm_sender_id">id:576361348926</string>
    <string name="addsport">Pick your Tournament and \n enjoy the game</string>
    <string name="next">NEXT</string>
    <string name="st1_no_notification">No notifications yet!!!</string>
    <string name="st2_no_notification">Come back again &amp; check \n for notifications</string>
    <string name="accuracy_streak">More than 80% accuracy in your last 5 matchList</string>
    <string name="table_topper">Top 5 in this leaderboard</string>
    <string name="firebase_app_id">1:576361348926:android:3c3bd6e49df59227</string>
    <string name="firebase_api_key">AIzaSyDlx9THo_Luvb9ldGDznisfFX3rTks85HQ</string>
    <string name="firebase_gcm_sender_id">576361348926</string>
    <string name="firebase_token">AIzaSyBrV_SlcRbyF_YLZDTghKrZKc066uMuxw4</string>
    <string name="firebase_url">https://sportscafe-scgame-prod.firebaseio.com</string>
    <string name="cashfree_app_id">374123e1b8eb30b2ec8838d473</string>
    <string name="aws_pinpoint_pool_id">ap-southeast-1:9b181389-3a74-4cc6-89c1-3c99a50e428d</string>
    <string name="aws_app_id">2dbeb11bf7474761afac1a7e69a61e25</string>
    <string name="new_version_title">New Version Available!</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="terms"><![CDATA[NOSTRAGAMUS BETA USER NON-DISCLOSURE AGREEMENT\n \nYour access to and use of the Android app Nostagramus (here-after referred to as Software), owned by Gambit Sports Private Limited (here-after referred to as Company), for the purposes of Beta testing, is contingent on your acceptance of and compliance with the Terms described in this document. These Terms apply to all visitors, users and others who access or use the Software. By accessing or using the Software you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Software. \n\n User\'s Obligations \n \n User shall play and test the Software under normally expected operating conditions in User\'s environment during the test period. User can share the game among his/her/their peers/staff for further testing after receiving prior consent from the Company or its authorised representatives. All the terms of the agreement given below are expected to be upheld by the user and peers/staff with whom the game has been shared. The user is obligated to ensure the others also follow the terms of this agreement. In case of any violation of the terms of this agreement by the user or any (or a group) of the peers, the user will be held in contempt of the non-disclosure agreement. The management of the Company has then the right to receive compensation as appropriately decided by itself or even initiate necessary litigations, under jurisdictions as described in General Provisions. \n\n Software a Trade Secret \n\n The Software is proprietary to, and a valuable trade secret of the Company. It is entrusted to User only for the purposes of demonstration and feedback of usability. User shall maintain Software in the strictest confidence. User will not, without Company\'s prior written consent: (a) disclose any information about Software, its idea, concept, implementation, design, gameplay, feature, and performance specifications, its code, and the existence of the beta test and its results to anyone other than those who are performing the testing and who shall be subject to nondisclosure restrictions at least as protective as those set forth in this Agreement; (b) copy any portion of Software or documentation, except to the extent necessary to perform beta testing; or reverse engineer, decompile or disassemble Software or any portion of it. \n \n Security Precautions \n\n User shall take reasonable security precautions to prevent the “Software” from being accessed by unauthorized individuals whether stored on User\'s hard drive or e-mail/cloud servers or on mobile devices, tablets, desktop computers or on physical copies such as CD-ROMS, diskettes or other media. \n \n Term of Agreement \n\n The test period shall last till 31st December. This Agreement shall terminate at the end of the test period and after the user deletes the “Software” from his records. The restrictions and obligations contained in Clauses 1,2,3,5,6 and 7 shall survive the expiration, termination or cancellation of this Agreement, and shall continue to bind User, its successors, heirs and assigns. Limitation of Liability Company shall not be responsible for any loss or damage to User or any third parties caused by Software. COMPANY SHALL NOT BE LIABLE FOR ANY DIRECT, INDIRECT, SPECIAL, INCIDENTAL OR CONSEQUENTIAL DAMAGE, WHETHER BASED ON CONTRACT OR TORT OR ANY OTHER LEGAL THEORY, ARISING OUT OF ANY USE OF SOFTWARE OR ANY PERFORMANCE OF THIS AGREEMENT. \n\n No Rights Granted \n\n This Agreement does not constitute a grant or an intention or commitment to grant any right, title or interest in Software or Company\'s trade secrets to User. User may not sell or transfer any portion of Software to any third party or use Software in any manner to produce, market or support its own products. User shall not identify Software as coming from any source other than Company. \n\n General Provisions \n\n \n(a) Severability: If a court finds any provision of this Agreement invalid or unenforceable, the remainder of this Agreement shall be interpreted so as best to effect the intent of the parties. \n(b) Integration: This Agreement expresses the complete understanding of the parties with respect to the subject matter and supersedes all prior proposals, agreements, representations and understandings. This Agreement may not be amended except in a writing signed by both parties. \n(c) Waiver: The failure to exercise any right provided in this Agreement shall not be a waiver of prior or subsequent rights. \n(d) Attorney Fees and Expenses: In a dispute arising out of or related to this Agreement, the prevailing party shall have the right to collect from the other party its reasonable attorney fees and costs and necessary expenditures. \n(e) Jurisdiction: This Agreement shall be governed in accordance with the laws of the State of Karnataka. The parties consent to the exclusive jurisdiction and venue of the federal and state courts located in Karnataka, India in any action arising out of or relating to this Agreement. The parties waive any other venue to which either party might be entitled by domicile or otherwise.]]></string>
    <string name="termspolicy"><![CDATA[<u>Terms and Conditions</u>]]></string>
    <string name="fb_share_result_text">%1$s just predicted %2$s events in %3$s match and scored %4$d points.\n\nGet the Nostragamus app and see if you can do better than me in the next match.\n%5$s</string>
    <string name="fuzzy_players_hint">Search Players..</string>
    <string name="view_profile">View Profile</string>
    <string name="total_points">Total Points</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="position">Position</string>
    <string name="sports">Sports</string>
    <string name="groups">Groups</string>
    <string name="challenges">Challenges</string>
    <string name="fuzzy_lbs_hint">Search by tournament/group/newChallengesResponse</string>
    <string name="play">Play</string>
    <string name="neither">Neither</string>
    <string name="dummy_start_title">Welcome to Nostragamus!</string>
    <string name="dummy_start_desc">Let\'s go through a sample game to help you understand how to ace it at Nostragamus. You may skip if you are familiar with the gameplay, and you can always access this sample game from the Settings menu inside your Profile section.</string>
    <string name="dummy_start_action">Next</string>
    <string name="dummy_done_title">Well Done!</string>
    <string name="dummy_done_desc">You just finished your first game, but its now time for the real deal. Proceed to your tournament feed to start swiping on upcoming sporting matchList!</string>
    <string name="dummy_done_action">Proceed</string>
    <string name="left_right_coach_title">Swipe left or right</string>
    <string name="left_right_coach_desc">Swipe to make a choice between the two options presented</string>
    <string name="neither_coach_title">Swipe up to go for the third option</string>
    <string name="neither_coach_desc">Sometimes questions will have a third option like Neither, Both or Draw. Tap this or swipe upwards to go with this option</string>
    <string name="powerups_coach_title">Score big with Powerups</string>
    <string name="powerups_coach_desc">Powerups will help you maximise your score so use them wisely. You can use only one powerup per question</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="support">Support</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="paytm">Connect to Paytm</string>
    <string name="logout">Logout</string>
    <string name="refer_friend">Refer a Friend</string>
    <string name="report_problem">Report a Problem</string>
    <string name="about">About</string>
    <string name="about_us">About Nostragamus</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="game_play">Gameplay</string>
    <string name="rules">Rules</string>
    <string name="privacy">Privacy</string>
    <string name="dummy_game">Play Sample Game</string>
    <string name="powerup_bank_running_low">You seem to be running low!</string>
    <string name="powerup_bank_refer_benefit">You get one of each powerup , everytime a friend joins the game</string>
    <string name="powerup_bank_add_info">button on the game screen, to add</string>
    <string name="powerup_bank_add_info_two">these powerups to that newChallengesResponse</string>
    <string name="empty_group">Keep track of how you\'re doing compared to friends, family and colleagues!</string>
    <string name="empty_leaderboard">Start playing a newChallengesResponse to view leaderboards!</string>
    <string name="empty_results">Matches you play will appear here</string>
    <string name="ob_how_play_title">How to play?</string>
    <string name="ob_join_challenge_title">Join public challenges</string>
    <string name="ob_predict_match_title">Predict match events</string>
    <string name="ob_war_friends_title">War with Friends</string>
    <string name="ob_how_play_desc">Swipe right to know more</string>
    <string name="ob_join_challenge_desc">Compete for fun, or win cash</string>
    <string name="ob_predict_match_desc">Read in-game stats. Swipe to predict</string>
    <string name="ob_war_friends_desc">Create you own private leagues</string>
    <string name="order_id">Order Id : </string>
    <string name="customer_id">Customer Id : </string>
    <string name="transaction_amount">Transaction Amount : </string>
    <string name="channel_id">Channel Id : </string>
</resources>