<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.jeeva.android.widgets.customfont.CustomTextView
        android:id="@+id/dummy_game_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/dummy_start_title"
        android:textColor="@color/white_80"
        android:textSize="@dimen/dp_16"
        app:typeface="lato_regular" />

    <com.jeeva.android.widgets.customfont.CustomTextView
        android:id="@+id/dummy_game_tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_24"
        android:gravity="center"
        android:text="@string/dummy_start_desc"
        android:textColor="@color/white_80"
        android:textSize="@dimen/dp_14"
        app:typeface="roboto_condensed" />

    <com.jeeva.android.widgets.customfont.CustomButton
        android:id="@+id/dummy_game_btn_action"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_36"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/tournament_ready_btn_bg"
        android:gravity="center"
        android:minWidth="@dimen/dp_72"
        android:paddingBottom="@dimen/dp_2"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:paddingTop="@dimen/dp_0"
        android:text="@string/dummy_start_action"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_14"
        app:typeface="roboto_condensed" />

</LinearLayout>